--- a/direct-wiremock-deployment.yaml
+++ b/direct-wiremock-deployment.yaml
@@ -75,9 +75,10 @@ spec:
           httpGet:
             path: /__admin/
             port: 8080
-          initialDelaySeconds: 20
+          initialDelaySeconds: 30
           periodSeconds: 10
           timeoutSeconds: 5
+          failureThreshold: 6
         volumeMounts:
         - name: wiremock-jars
           mountPath: /opt/wiremock
